@@ -8,6 +8,7 @@ Jump Start Changelog
 * Fixed issues with `FORCE_SSL_ADMIN` set to true on admin modules.
 * Made Google+ icons standards-compliant.
 * Added ability to hide Theme License admin page via `themeblvd_global_config` filter.
+* Added filterable "edit_theme_options" capability to License admin page.
 * Improved default `content-attachment.php`.
 
 1.0.2
